--- a/icontextview/src/main/res/values/attrs.xml
+++ b/icontextview/src/main/res/values/attrs.xml
@@ -2,7 +2,7 @@
 <resources>
     <declare-styleable name="IconTextView">
         <attr name="text" format="string"/>
-        <attr name="textSize" format="float"/>
+        <attr name="textSize" format="dimension"/>
         <attr name="textColor" format="color"/>
 
         <attr name="src" format="reference"/>
