--- a/icontextview/src/main/res/layout/icontextview_item_horizontal.xml
+++ b/icontextview/src/main/res/layout/icontextview_item_horizontal.xml
@@ -13,10 +13,10 @@
         android:layout_height="match_parent" />
 
     <TextView
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:id="@+id/icontextview_text"
         android:text="teststes"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
 </LinearLayout>
