--- a/icontextview/src/main/res/values/attrs.xml
+++ b/icontextview/src/main/res/values/attrs.xml
@@ -4,6 +4,11 @@
         <attr name="text" format="string"/>
         <attr name="textSize" format="dimension"/>
         <attr name="textColor" format="color"/>
+        <attr name="textAlignment" format="flags">
+            <flag name="center" value="0"/>
+            <flag name="left" value="1"/>
+            <flag name="right" value="2"/>
+        </attr>
 
         <attr name="src" format="reference"/>
     </declare-styleable>
